tests/baselines/reference/mapGroupBy.errors.txt
mapGroupBy.ts(3,27): error TS2345: Argument of type 'string' is not assignable to parameter of type 'Iterable<unknown>'.


==== mapGroupBy.ts (1 errors) ====
    const basic = Map.groupBy([0, 2, 8], x => x < 5 ? 'small' : 'large');
    
    const chars = Map.groupBy('a string', c => c);
                              ~~~~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'Iterable<unknown>'.
    
    type Employee = { name: string, role: 'ic' | 'manager' }
    const employees: Set<Employee> = new Set();
    const byRole = Map.groupBy(employees, x => x.role);
    
    const byNonKey = Map.groupBy(employees, x => x);
    